force-app/main/default/objects/Knowledge_Translation_Request__c/Knowledge_Translation_Request__c.object-meta.xml
<CustomObject>
    <description>L1/L3 fixture: tracks per-language Knowledge article translation drafts and publication workflow state for MCP consumer-support testing.</description>
    <label>Knowledge Translation Request</label>
    <nameField>
        <label>Translation Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Translation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>