force-app/main/default/objects/Knowledge_Translation_Request__c/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue__c</fullName>
    <description>Explicit Translation Queue or validation step blocking direct Publish (e.g. Spanish Translation Group).</description>
    <label>Assigned Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>