force-app/main/default/objects/Knowledge_Translation_Request__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>Knowledge language channel (e.g. en_US, es). Publishing rights are isolated per language channel.</description>
    <label>Language Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>English (US)</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>