force-app/main/default/objects/Knowledge_Translation_Request__c/fields/Master_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Article_Id__c</fullName>
    <description>Knowledge article master version Id (English source article).</description>
    <label>Master Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>