force-app/main/default/objects/Knowledge_Translation_Request__c/fields/Translation_Status__c.field-meta.xml
<CustomField>
    <fullName>Translation_Status__c</fullName>
    <description>Article status in the translation workflow. Draft Translations list view shows records in Draft or In Translation Queue.</description>
    <label>Translation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In_Translation_Queue</fullName>
                <label>In Translation Queue</label>
            </value>
            <value>
                <fullName>Pending_Review</fullName>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>